force-app/main/default/objects/Column_settings__mdt/Column_settings__mdt.object-meta.xml
<CustomObject>
    <label>Column settings</label>
    <pluralLabel>Column settings</pluralLabel>
</CustomObject>