force-app/main/default/objects/Column_settings__mdt/fields/Api_field_name__c.field-meta.xml
<CustomField>
    <fullName>Api_field_name__c</fullName>
    <label>Api field name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>