force-app/main/default/objects/Column_settings__mdt/fields/Application_message_attributes__c.field-meta.xml
<CustomField>
    <fullName>Application_message_attributes__c</fullName>
    <label>Application message attributes</label>
    <referenceTo>Application_message_attributes__mdt</referenceTo>
    <relationshipLabel>Column settings</relationshipLabel>
    <relationshipName>Column_settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>