force-app/main/default/objects/Column_settings__mdt/fields/Button_icon_attributes__c.field-meta.xml
<CustomField>
    <fullName>Button_icon_attributes__c</fullName>
    <label>Button icon attributes</label>
    <referenceTo>Button_icon_attributes__mdt</referenceTo>
    <relationshipLabel>Column settings</relationshipLabel>
    <relationshipName>Column_settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>