force-app/main/default/objects/Column_settings__mdt/fields/Cell_attributes__c.field-meta.xml
<CustomField>
    <fullName>Cell_attributes__c</fullName>
    <label>Cell attributes</label>
    <referenceTo>Cell_attributes__mdt</referenceTo>
    <relationshipLabel>Column settings</relationshipLabel>
    <relationshipName>Column_settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>