force-app/main/default/objects/Column_settings__mdt/fields/Combobox_picklist_attributes__c.field-meta.xml
<CustomField>
    <fullName>Combobox_picklist_attributes__c</fullName>
    <label>Combobox picklist attributes</label>
    <referenceTo>Combobox_picklist_attributes__mdt</referenceTo>
    <relationshipLabel>Column settings</relationshipLabel>
    <relationshipName>Column_settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>