force-app/main/default/objects/Column_settings__mdt/fields/Document_link_attributes__c.field-meta.xml
<CustomField>
    <fullName>Document_link_attributes__c</fullName>
    <label>Document link attributes</label>
    <referenceTo>Document_link_attributes__mdt</referenceTo>
    <relationshipLabel>Column settings</relationshipLabel>
    <relationshipName>Column_settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>