force-app/main/default/objects/Column_settings__mdt/fields/Icon_from_picklistvalue_attributes__c.field-meta.xml
<CustomField>
    <fullName>Icon_from_picklistvalue_attributes__c</fullName>
    <label>Icon from picklistvalue attributes</label>
    <referenceTo>Icon_from_picklistvalue_attributes__mdt</referenceTo>
    <relationshipLabel>Column settings</relationshipLabel>
    <relationshipName>Column_settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>