force-app/main/default/objects/Column_settings__mdt/fields/Related_record_attributes__c.field-meta.xml
<CustomField>
    <fullName>Related_record_attributes__c</fullName>
    <label>Related record attributes</label>
    <referenceTo>Related_record_attributes__mdt</referenceTo>
    <relationshipLabel>Column settings</relationshipLabel>
    <relationshipName>Column_settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>