force-app/main/default/objects/Column_settings__mdt/fields/Show_label__c.field-meta.xml
<CustomField>
    <fullName>Show_label__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For columns that show picklist values either as text or as combobox. Determines whether we show translated values.</description>
    <inlineHelpText>For columns that show picklist values either as text or as combobox. Determines whether we show translated values.</inlineHelpText>
    <label>Show label</label>
    <type>Checkbox</type>
</CustomField>