force-app/main/default/objects/Column_settings__mdt/fields/Star_rating_attributes__c.field-meta.xml
<CustomField>
    <fullName>Star_rating_attributes__c</fullName>
    <label>Star rating attributes</label>
    <referenceTo>Star_rating_attributes__mdt</referenceTo>
    <relationshipLabel>Column settings</relationshipLabel>
    <relationshipName>Column_settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>