force-app/main/default/objects/Column_settings__mdt/fields/Text_attributes__c.field-meta.xml
<CustomField>
    <fullName>Text_attributes__c</fullName>
    <label>Text attributes</label>
    <referenceTo>Text_attributes__mdt</referenceTo>
    <relationshipLabel>Column settings</relationshipLabel>
    <relationshipName>Column_settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>