force-app/main/default/objects/Column_settings__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of column: corresponds to lightning-datatable column type, custom datatype OR cv</description>
    <label>Type</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>